[Blink/Paint] Should not apply compositing recorder to scrolling layers

Any stacking context effects should have been applied by layers at a
higher hierarchy already. Applying the additional compositing recorder
will clip descendants inadvertently.

BUG=798148

Change-Id: I4eddaf12baa61f48e38b01fa4c15097a8765a9d3